# freelance-escrow-chains

./: Cargo.toml
.github/actions/macos-dependencies/: action.yml
.github/actions/ubuntu-dependencies/: action.yml
.github/workflows/: release.yml
pallets/escrow/: Cargo.toml
pallets/escrow/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
