[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-minimal-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/escrow",   # ✅ ADDED
    "runtime",
]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
	'cfg(ignore_flaky_test)',
	'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 }
derivable_impls = { level = "allow", priority = 2 }
eq_op = { level = "allow", priority = 2 }
erasing_op = { level = "allow", priority = 2 }
extra-unused-type-parameters = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }
needless_option_as_deref = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
option-map-unit-fn = { level = "allow", priority = 2 }
stable_sort_primitive = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }
while_immutable_condition = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }

[workspace.dependencies]
minimal-template-runtime = { path = "./runtime", default-features = false }
pallet-minimal-template = { path = "./pallets/template", default-features = false }
pallet-escrow = { path = "./pallets/escrow", default-features = false }  # ✅ ADDED

clap = { version = "4.5.13" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.24.10" }
polkadot-sdk = { version = "2512.1.0", default-features = false }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true